[build-system]
requires = ["setuptools", "setuptools-scm"]

[project]
name = "simple-bert-pytorch"
authors = [
    {name = "Frank Odom", email = "frank.odom.iii@gmail.com"},
]
description = "simple-bert-pytorch"
license = {text = "MIT"}
dynamic = ["version", "readme"]  # NOTE: Must be in sync with [tool.setuptools.dynamic] below
dependencies = [
    "torch>=2.0,<3",
]
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools.dynamic]
# NOTE: Must be in sync with 'project.dynamic' above
version = {attr = "simple_bert_pytorch.VERSION"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = ["tests"]

# extra packages (e.g. pip install .[test])
[project.optional-dependencies]
test = [
    "transformers==4.44.2",
    # linting and unit tests
    "black==24.8.0",
    "mypy==1.11.1",
    "pre-commit==3.8.0",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "ruff==0.6.2",
]


# ----- Linting, Formatting, and Typing -----

[tool.black]
line-length = 88

[tool.mypy]
files = "simple_bert_pytorch/"
check_untyped_defs = "true"
ignore_missing_imports = "true"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report term-missing --cov-fail-under 80"
filterwarnings = "ignore:.*.:DeprecationWarning"

[tool.ruff]
ignore = ["B905", "E501"]
line-length = 88
select = [
    "B",
    "C",
    "E",
    "F",
    "I",
    "W"
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.mccabe]
max-complexity = 18